ingress/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: tenant-a
  annotations:
    oci-native-ingress.oraclecloud.com/healthcheck-protocol: "HTTP"
    oci-native-ingress.oraclecloud.com/healthcheck-port: "80"
    oci-native-ingress.oraclecloud.com/healthcheck-path: "/"
spec:
    ingressClassName: native-ic-ingress-class
    rules:
    - http:
        paths:
        - path: /nginx
          pathType: Prefix
          backend:
            service:
              name: nginx
              port:
                number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  namespace: tenant-b
  annotations:
    oci-native-ingress.oraclecloud.com/healthcheck-protocol: "HTTP"
    oci-native-ingress.oraclecloud.com/healthcheck-port: "80"
    oci-native-ingress.oraclecloud.com/healthcheck-path: "/"
spec:
    ingressClassName: native-ic-ingress-class
    rules:
    - http:
        paths:
        - path: /caddy
          pathType: Prefix
          backend:
            service:
              name: caddy
              port:
                number: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    oci-native-ingress.oraclecloud.com/healthcheck-protocol: "HTTP"
    oci-native-ingress.oraclecloud.com/healthcheck-port: "8080"
    oci-native-ingress.oraclecloud.com/healthcheck-path: "/argocd/"
spec:
    ingressClassName: native-ic-ingress-class
    rules:
    - http:
        paths:
        - path: /argocd
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
